<resources>
    <string name="app_name">CliSo</string>
    <string name="title_activity_main2">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Success">You have successfully Logout</string>
    <string name="Login">You have successfully Login</string>
    <string name="close_app">Do you want to close CliSo App ?</string>
    <string name="windup">Are you want to wind up all test</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="dghandbill">DIGITAL HANDBILLS</string>
    <string name="dg_template">Templates</string>
    <string name="str_no_record_found">No records found</string>
    <string name="fill_user">Fill the details</string>
    <string name="name_digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="bs_name">NAME*</string>
    <string name="bs_mobile_number">MOBILE NUMBER*</string>
    <string name="email_id_mand">EMAIL ID*</string>
    <string name="email_digits">abcdefghijklmnopqrstuvwxyz1234567890.@-_</string>
    <string name="addressvalidationhandbill">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890,./-()&amp;</string>
    <string name="addressnotmand">CAMP ADDRESS</string>
    <string name="pincodenotmand">Pincode</string>
    <string name="forservice">For Service</string>
    <string name="btn_preview">Submit</string>
    <string name="handbill">Handbill</string>
    <string name="btn_download">Download</string>
    <string name="btn_share">Share</string>
    <string name="btn_delete">Delete</string>
    <string name="download">Download</string>
    <string name="generate">Generate</string>
    <string name="bs_pt_name">NAME*</string>
    <string name="bs_enter_mobile_number">MOBILE NUMBER*</string>
    <string name="bs_enter_email_address">EMAIL ID</string>
    <string name="bs_age">AGE*</string>
    <string name="ppe">Barcode*</string>
    <string name="bs_value">Value*</string>
    <string name="upload_trf">*Upload TRF</string>
    <string name="billing">Per Day Billing \n(Last 30 days)</string>
    <string name="daysoutstand">Current outstanding \n &#160;&#160;&#160;&#160;&#160;will suffice</string>
    <string name="alphachar">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuioplkjhgfdsazxcvbnm1234567890 .,-|@</string>
    <string name="email_id">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuioplkjhgfdsazxcvbnm1234567890@_.</string>
    <string name="alphabets">QWERTYUIOPASDFGHJKLZXCVBNMqwertyuioplkjhgfdsazxcvbn m </string>
    <string name="text_with_bullet"> \u2022</string>
    <string name="bnkname">Bank Name : AXIS BANK</string>
    <string name="branchname">Branch Name : SANPADA</string>
    <string name="acholdername">Account Holders Name : NUECLEAR HEALTHCARE LIMITED</string>
    <string name="acno">Account Number : 911020012308803</string>
    <string name="ifsc">IFSC Code for NEFT/RTGS : UTIB0000641</string>
    <string name="mk_payment">To make payment, you may transfer via NEFT, RTGS and Bank Transfer to</string>
    <string name="amtcollval">Entered amount collected should be greater than or equal to</string>
    <string name="lessamtcollval">Entered amount collected should be less than or equal to</string>
    <string name="more">More...</string>
    <string name="less">Less...</string>
    <string name="browser">Download via link</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">Network Error</string>
    <string name="internet_connetion_error">Check Internet Connection</string>
    <string name="loading">Loading...</string>
    <string name="progress_message_SGC_DATA_please_wait">Fetching SGC Data, Please wait ....</string>
    <string name="plz_chk_internet">Please check your internet connection</string>
    <string name="digits">0123456789</string>
    <string name="mobile">Mobile No.<font color="#e90f1e">*</font></string>
    <string name="email">Email ID </string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="incharge_name">Incharge Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone_number_ex_022_7878787">ENTER PHONE NUMBER EX. 022-7878787</string>
    <string name="enter_website">ENTER WEBSITE</string>
    <string name="visiting_card">Visiting Card</string>
    <string name="enter_client_name">Enter Client Name</string>
    <string name="enter_email_address">Enter Email Id</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="amt_str">Enter Minimum Amount of,\n Rs 5,000 to Proceed</string>
    <string name="multiple_amt">You have to enter amount in multiples of 5000</string>
    <string name="covid">Covid Registration</string>
    <string name="page_1">Novid Woe</string>
    <string name="page_2">Offline Wind - Up</string>
    <string name="page_3">Receipt</string>
    <string name="page_4">Results</string>
    <string name="page_5">Ledger</string>
    <string name="page_6">Consignment Entry</string>
    <string name="page_7">CHN</string>
    <string name="page_8">Billing</string>
    <string name="page_9">Rate calculator</string>
    <string name="petct">SCAN</string>
    <string name="remarks_val">Remarks should not start with special characters</string>
    <string name="space_val_remarks">Remarks should not start with space</string>
    <string name="email_no_space">Email ID should not start with space</string>
    <string name="name_digits_no_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="dot">:</string>
    <string name="fstname">Patient name</string>
    <string name="fname">First name*</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name*</string>
    <string name="l_name">Last name</string>
    <string name="addconsumables">Add Consumables</string>
    <string name="gender">Gender : </string>
    <string name="diabetes">Diabetes : </string>
    <string name="date">DOB :</string>
    <string name="app_date">Appointment Date :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="city">City </string>
    <string name="remarks">Remarks</string>
    <string name="amt_coll">Amount Collected</string>
    <string name="remarks_digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,-</string>
    <string name="couponCharacters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz-0123456789</string>
    <string name="coupon">Coupon Code*</string>
    <string name="applycoupon">Apply</string>
    <string name="submit">Submit</string>
    <string name="resubmit">Re-submit</string>
    <string name="btnreset">Reset</string>
    <string name="scansumm">Scan Summary</string>
    <string name="paynow">Pay Now</string>
    <string name="confirmbook">Confirm Booking</string>
    <string name="str_about_pet_ct">ABOUT PET CT SCAN</string>
    <string name="nodata">No Data Available</string>
    <string name="googlemapkey">AIzaSyA7O3Qip0AmZy38njI8SgPpV6KuEt2qQOQ</string>
    <string name="enterccc">VERIFY</string>
    <string name="btngenerateccc">GENERATE CCC</string>
    <string name="reset_mob">Reset Number?</string>
    <string name="allfields">Note : Submit button will enable once all mandatory fields entered</string>
    <string name="alphabets1">QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="alphabetsandnumber">QWERTYUIOPASDFGHJKLZXCVBNM 0123456789</string>
    <string name="imgupload">Image Uploaded</string>
    <string name="viewupload">View Uploads</string>
    <string-array name="arr_city">
        <item>Select City*</item>
    </string-array>
    <string-array name="arr_book">
        <item>Select Service Type*</item>
    </string-array>
    <string-array name="arr_gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="str_legderbal">Ledger Balance</string>
    <string name="str_enter_name">Please Enter Name</string>
    <string name="str_enter_email">Please Enter Email id</string>
    <string name="str_select_city">Please Enter City</string>
    <string name="str_enter_coupon">Please Enter Coupon Code</string>
    <string name="space_val_name">Name should not start with space</string>
    <string name="space_val_amt">amount should not start with space</string>
    <string name="enter_amt">Please enter collected amount</string>
    <string name="str_register_txt">Not registered ?<u>Register Now</u></string>
    <string name="valid_name">Enter valid name</string>
    <string name="str_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="str_should_be_ten_digits">Mobile number should be of 10 digits</string>
    <string name="str_valid_mobile_no">Please Enter valid Mobile Number</string>
    <string name="str_val_city">Please Select City</string>
    <string name="str_val_bookType">Please Select Service Type</string>
    <string name="str_slot">Please Select slot</string>
    <string name="str_gender_val">Please Select gender</string>
    <string name="str_diab_val">Please Select Diabetes</string>
    <string name="str_dob_val">Please Select DOB</string>
    <string name="str_appdt_val">Please Select Appointment Date</string>
    <string name="str_slc">Please Select DOB or Age</string>
    <string name="str_age">Please enter Age</string>
    <string name="email_id_value"><font color='#ffffff'>accounts@nueclear.com</font></string>
    <string name="img_upload">Upload image</string>
    <string name="view_trf_image"><u>View TRF image</u></string>
    <string name="view_receipt_image"><u>View receipt image</u></string>
    <string name="stock_digits">0123456789-.</string>
    <string name="alphanumeric_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="bs_bp_entry">BS &amp; BP ENTRY</string>
    <string name="covid_reg">COVID REGISTRATION</string>
    <string name="srf_covid_woe">SRF COVID WOE</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset">Reset</string>
    <string name="receipt">Receipt</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_wait_00_00">Please wait 00:00</string>
    <string name="str_resend_otp"><u>Resend OTP</u></string>
    <string name="verified">Verified</string>
    <string name="bs_otp">OTP*</string>
    <string name="number_digits">0123456789</string>
    <string name="pincode_mand">PINCODE*</string>
    <string name="collected_amount">Collected amount</string>
    <string name="verify">Verify</string>
    <string name="re_upload">Re-upload</string>
    <string name="image_uploaded"><u>Image uploaded</u></string>
    <string name="choose_file">Choose file</string>
    <string name="rupeeSymbol">₹</string>
    <string name="upload_voice_message">Upload voice message</string>
    <string name="reupload_voice_message">Re-upload voice message</string>
    <string name="upload_image">Upload image</string>
    <string name="re_upload_image">Re-upload image</string>
    <string name="start_record">Click on below icon to start recording</string>
    <string name="stop_record">Click on below icon to stop recording</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="play_recorded_audio">Play recorded audio</string>
    <string name="updateText" translatable="false">Newer version of CliSo is available. Click UPDATE to upgrade now !</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="update" translatable="false">Update</string>
</resources>