<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_14"
        android:text="@string/updateText"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textSize="@dimen/label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_10">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/maroon"
            android:text="@string/update"
            android:textSize="@dimen/label"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/maroon"
            android:text="@string/cancel"
            android:textSize="@dimen/label"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browser"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/value"/>

</LinearLayout>