<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mk_payment"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_with_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bnkname"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_with_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchname"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_with_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acholdername"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_with_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acno"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_with_bullet"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ifsc"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal"/>

        </LinearLayout>





    </LinearLayout>

</LinearLayout>