<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_5">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/play_recorded_audio"
            android:textAllCaps="true"
            android:textSize="@dimen/label" />

        <ImageView
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_audio_black_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_play"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/maroon_rect_box"
                android:text="@string/play"
                android:textColor="@color/white"
                android:textSize="@dimen/label" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/maroon_rect_box"
                android:text="@string/stop"
                android:textColor="@color/white"
                android:textSize="@dimen/label" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>