<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dp_5">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/start_record"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/dp_18" />

        <ImageView
            android:id="@+id/img_record"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_start_record" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/maroon_rect_box"
                android:text="@string/discard"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_20" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/maroon_rect_box"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_20" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>